--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "gulp",
     "template"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "bower": "~1.3.5",
     "browserify": "~6.1.0",
@@ -30,6 +29,7 @@
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "~1.0.1",
     "gulp-util": "~3.0.1",
+    "reactify": "^1.0.0",
     "vinyl-source-stream": "~1.0.0",
     "watchify": "~2.0.0"
   },
